Fixes tab focus styles (+1 squashed commit) Squashed commits: [2277fcd] Makes tab colouring universal removing the need for explicit theming
- also removes extraneous div.results from HousingCompanyDetails

--- a/frontend/src/styles/base/_general.sass
+++ b/frontend/src/styles/base/_general.sass
@@ -3,6 +3,8 @@
 *
   --tab-color: var(--color-black-90)
   --tab-active-border-color: var(--color-black-90)
+  --tab-focus-outline-size: 1px
+  --tab-focus-outline-color: var(--color-black-20)
 
 *, *::after, *::before
   @include box-sizing(border-box)
